# rmf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
examples/plugins/credential_scanner/: Cargo.toml
examples/plugins/credential_scanner/src/: lib.rs
src/: lib.rs  loader.rs  main.rs  modules.rs  paging.rs  plugin.rs  processes.rs  tests.rs
src/arch/: x86_64.rs
src/plugin/: mod.rs  pe_scanner.rs  registry.rs  string_carve.rs
src/tests/: paging_tests.rs
