[package]
name = "rmf"
version = "0.1.0"
edition = "2021"
authors = ["RMF Developers"]
description = "Rust Memory Forensics Toolkit - Memory analysis for security researchers"
repository = "https://github.com/rmf-dev/rmf"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.5"
scroll = "0.11"
indicatif = "0.17"
colored = "2.1"
pager = "0.16"
prettytable-rs = "0.10"
chrono = "0.4"
thiserror = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
log = "0.4"
env_logger = "0.10"

# Optional dependencies
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = []
plugins = ["libloading"]
